# WanChatServerClient

./: CMakeLists.txt  README.md
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/: clienMain.txt
test/testjson/: testjson.cpp
test/testmuduo/: CMakeLists.txt  muduo_server.cpp
